TEST_PROGRAMS/VALID/05/empty_raw_string.go
/* Empty raw string. */

package main

func main() {
	var s string = ``
}
