TEST_PROGRAMS/INVALID/04/14.go
package main

func main() {
    //Illegal backtick in raw string
    var x = `ab`ab`
    x++ // "use" x
}
